style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --font-family: 'Helvetica Neue', Roboto, 'Segoe UI', Calibri, sans-serif;
  --color-white: #fff;
  --color-grey: #e5ecf0;
  --color-text1: #13171a;
  --color-text2: #617788;
  --color-text-dark-mode: #fff;
  --color-twitter: #00a1f9;
}

html,
body {
  width: 100%;
  height: 100%;
  font-family: var(--font-family);
}

/* helpers */
.flex-1 {
  flex: 1;
}
.d-flex {
  display: flex;
}
.flex-column {
  flex-direction: column;
}
.justify-content-center {
  justify-content: center;
}
.justify-content-between {
  justify-content: space-between;
}
.justify-content-around {
  justify-content: space-around;
}
.align-items-center {
  align-items: center;
}
.align-items-stretch {
  align-items: stretch;
}
.w-100 {
  width: 100%;
}
.h-100 {
  width: 100%;
}

/* custom style */
.container {
  padding: 15px;
  width: 600px;
  padding-bottom: 80px;
}

.field-label {
  font-size: 18px;
  color: var(--color-text2);
  font-weight: 700;
}
.field-textarea {
  margin-top: 8px;
  height: 85px;
  border: 1px solid var(--color-grey);
  padding: 8px 5px;
  font-size: 15px;
}
.field-textarea:focus {
  outline: none;
}

.preview {
  margin-top: 10px;
  box-shadow: 0px 0px 50px var(--color-grey);
}

.form-select {
  margin-top: 8px;
  height: 40px;
  font-size: 16px;
  padding: 20px;
  color: var(--color-text1);
  background-color: white;
  border: 1px solid var(--color-grey);
  border-radius: 4px;
}

.dark-mode .form-select {
  color: var(--color-text-dark-mode);
}

.form-select:focus {
  outline: none;
}

.toolbar {
  position: fixed;
  bottom: 0px;
  left: 0px;
  height: 48px;
  background-color: #ccc;
}
.btn-save {
  font-weight: bold;
  text-transform: uppercase;
  border: none;
  background-color: var(--color-twitter);
  color: var(--color-white);
  font-size: 18px;
  padding: 10px;
  cursor: pointer;
  transition: all 400ms ease-in;
}
.btn-copy {
  font-weight: bold;
  text-transform: uppercase;
  border: none;
  background-color: var(--color-grey);
  color: var(--color-twitter);
  font-size: 18px;
  padding: 10px;
  cursor: pointer;
  transition: all 400ms ease-in;
}
.btn-save:focus,
.btn-copy:focus {
  outline: none;
}

.tweet {
  width: 100%;
  height: auto;
  padding: 15px;
  border: 1px solid #f4f4f4;
  transition: background-color 0.2s ease;
  background-color: white;
}

.header-image {
  width: 49px;
  height: 49px;
  overflow: hidden;
  border-radius: 50%;
}
.header-image > img {
  width: 100%;
}

.header-info {
  margin-left: 10px;
}
.header-info > h3 {
  color: var(--color-text1);
  font-size: 15px;
}
.dark-mode .header-info > h3 {
  color: var(--color-text-dark-mode);
}
.header-info > p {
  color: var(--color-text2);
  font-size: 15px;
}

.water-mark {
  flex: 1;
  opacity: 0.2;
  text-align: end;
}

.dark-mode .water-mark {
  color: white;
}

.header-icon {
  width: 18.75px;
  height: 18.75px;
  margin-left: 3px;
  fill: var(--color-twitter);
}

.tweet-body {
  padding: 10px 0;
  line-height: 1.3125;
  font-size: 23px;
  color: var(--color-text1);
}

.dark-mode .tweet-body {
  color: var(--color-text-dark-mode);
}

.tweet-label {
  padding: 10px 0;
  color: var(--color-text2);
}
.tweet-label > a {
  color: var(--color-twitter);
  text-decoration: none;
}
.tweet-label > a:hover {
  text-decoration: underline;
}

.tweet-analytics {
  padding: 15px 0;
  border-top: 1px solid var(--color-grey);
  border-bottom: 1px solid var(--color-grey);
}
.tweet-analytics span:last-child {
  margin-left: 15px;
}
.tweet-analytics span {
  color: var(--color-text2);
}
.tweet-analytics span strong {
  color: var(--color-text1);
}
.dark-mode .tweet-analytics span strong {
  color: var(--color-text-dark-mode);
}

.tweet-actions {
  padding: 15px 0px;
}
.tweet-actions > .icon {
  width: 22.5px;
  height: 22.5px;
}

.dark-mode .tweet-actions > .icon path {
  fill: var(--color-text2);
}

.dark-mode .header-icon {
  fill: var(--color-white);
}

.dark-mode.tweet {
  transition: background-color 0.2s ease;
  border: none;
  background-color: #16202A;
}

.message-wrapper {
  margin-top: 16px;
  position: relative;
}

.change-mode-wrapper {
  position: absolute;
  right: 4px;
}

.change-mode-wrapper label {
  margin-right: 8px;
  color: var(--color-text2);
  font-weight: bold;
}

.switch_box{
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	max-width: 200px;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-flex: 1;
	    -ms-flex: 1;
	        flex: 1;
}

input[type="checkbox"].switch_1{
  font-size: 30px;
  -webkit-appearance: none;
      -moz-appearance: none;
          appearance: none;
  width: 35px;
  height: 15px;
  background: #ddd;
  border-radius: 3em;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

input[type="checkbox"].switch_1:checked{
  background: var(--color-twitter);
}

input[type="checkbox"].switch_1:after{
  position: absolute;
  content: "";
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background: #fff;
  -webkit-box-shadow: 0 0 .25em rgba(0,0,0,.3);
          box-shadow: 0 0 .25em rgba(0,0,0,.3);
  -webkit-transform: scale(.7);
          transform: scale(.7);
  left: 0;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

input[type="checkbox"].switch_1:checked:after{
  left: calc(100% - 15px);
}

